Use new list factory method